--- a/Data_preparation.ipynb
+++ b/Data_preparation.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "ee13243e",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "7e8192f7",
    "metadata": {},
    "outputs": [],
@@ -62,33 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "9d4a09a5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['student_id', 'age', 'gender', 'study_hours_per_day',\n",
-       "       'social_media_hours', 'netflix_hours', 'part_time_job',\n",
-       "       'attendance_percentage', 'sleep_hours', 'diet_quality',\n",
-       "       'exercise_frequency', 'parental_education_level', 'internet_quality',\n",
-       "       'mental_health_rating', 'extracurricular_participation', 'exam_score'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "e9b95180",
    "metadata": {},
    "outputs": [],
@@ -108,7 +82,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
+   "id": "3764c126",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['student_id', 'age [years]', 'gender', 'study hours per day',\n",
+       "       'social media hours', 'Netflix hours', 'part_time_job',\n",
+       "       'attendance percentage', 'sleep hours', 'diet_quality',\n",
+       "       'exercise frequency [times/week]', 'parental_education_level',\n",
+       "       'internet_quality', 'mental health rating [scale 1-10]',\n",
+       "       'extracurricular_participation', 'exam score [scale 1-10]'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "014a1fc1",
    "metadata": {},
    "outputs": [
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "bfc985ab",
    "metadata": {},
    "outputs": [
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "185a02da",
    "metadata": {},
    "outputs": [
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "92393520",
    "metadata": {},
    "outputs": [
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "a82497af",
    "metadata": {},
    "outputs": [
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "903821aa",
    "metadata": {},
    "outputs": [
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "id": "c7152a4b",
    "metadata": {},
    "outputs": [
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "917b3c53",
    "metadata": {},
    "outputs": [],
