--- a/Exe/Optimization_Ex2_Solution_2024_25.ipynb
+++ b/Exe/Optimization_Ex2_Solution_2024_25.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 35,
       "metadata": {
         "id": "zfVlHN4t2sOm"
       },
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 36,
       "metadata": {
         "id": "8nH5Q_w_aOah"
       },
@@ -47,10 +47,10 @@
         {
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x1a25bce26c0>]"
+              "[<matplotlib.lines.Line2D at 0x1a25ced8c20>]"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 37,
       "metadata": {
         "id": "CvuLhQBbb9ex"
       },
@@ -128,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 38,
       "metadata": {
         "id": "Z3pt4SvGcbeW"
       },
@@ -227,7 +227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 39,
       "metadata": {
         "id": "7zXbpaWp2sOt"
       },
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 40,
       "metadata": {
         "id": "HR5BWSrJ2sOu"
       },
@@ -269,14 +269,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Number of samples n = "
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            " 569\n",
+            "Number of samples n =  569\n",
             "Dimension of each sample d =  2\n"
           ]
         },
@@ -314,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
         "id": "8jvdSBHC2sO0"
       },
@@ -378,7 +371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
         "id": "jlRtIH8W2sO1"
       },
@@ -434,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 43,
       "metadata": {
         "id": "c4ldekQzD6jl"
       },
@@ -442,10 +435,10 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.lines.AxLine at 0x1a25bec4b90>"
+              "<matplotlib.lines.AxLine at 0x1a25bce2e40>"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 43,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -496,7 +489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 44,
       "metadata": {
         "id": "jPqXRikH2sOy"
       },
@@ -514,7 +507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 45,
       "metadata": {
         "id": "hZZ-S1mg2sO2"
       },
@@ -576,7 +569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "b9jGmzINhU_m"
       },
@@ -584,10 +577,10 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.lines.AxLine at 0x1a25bcda060>"
+              "<matplotlib.lines.AxLine at 0x1a25bd572f0>"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 46,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -631,7 +624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 47,
       "metadata": {
         "id": "h8zC2rIm2sO3"
       },
@@ -651,7 +644,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 48,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -687,7 +680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 49,
       "metadata": {
         "id": "BLYgRtuxxenJ"
       },
@@ -839,7 +832,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 50,
       "metadata": {
         "id": "BMOaDAlU2sO5"
       },
@@ -934,7 +927,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 51,
       "metadata": {
         "id": "8iRTlwjN2sO6"
       },
