--- a/Data_preparation.ipynb
+++ b/Data_preparation.ipynb
@@ -206,11 +206,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 32,
-=======
-   "execution_count": null,
->>>>>>> 5558de96815b6ac626aa6455df62186f69a24e7e
    "id": "92393520",
    "metadata": {},
    "outputs": [
@@ -223,7 +219,7 @@
     }
    ],
    "source": [
-    "# Checking the percentage of missing data to understand how to handle it, \n",
+    "# I check the percentage of missing data to understand how to handle it, \n",
     "# setting a threshold to drop the regressor if more than 30% of its data is missing.\n",
     "missing_pct = dataset.isnull().mean() * 100\n",
     "missing_only = missing_pct[missing_pct > 0].sort_values(ascending=False)\n",
