--- a/Data_preparation.ipynb
+++ b/Data_preparation.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "ee13243e",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "7e8192f7",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "e9b95180",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "3764c126",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "014a1fc1",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "bfc985ab",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "185a02da",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "92393520",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
     }
    ],
    "source": [
-    "# I check the percentage of missing data to understand how to handle it, \n",
+    "# Checking the percentage of missing data to understand how to handle it, \n",
     "# setting a threshold to drop the regressor if more than 30% of its data is missing.\n",
     "missing_pct = dataset.isnull().mean() * 100\n",
     "missing_only = missing_pct[missing_pct > 0].sort_values(ascending=False)\n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "a82497af",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "903821aa",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "c7152a4b",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "917b3c53",
    "metadata": {},
    "outputs": [],
